--- a/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
+++ b/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
@@ -9,16 +9,17 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="380dp"
-        android:layout_height="206dp"
+        android:layout_width="384dp"
+        android:layout_height="237dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="6dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="2dp"
         android:src="@drawable/zubikolorea"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnPreviousGame"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
 
     <TextView
@@ -65,7 +66,7 @@
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.195"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
