--- a/app/src/main/res/layout/activity_hizkisalda_18.xml
+++ b/app/src/main/res/layout/activity_hizkisalda_18.xml
@@ -8,6 +8,18 @@
     android:background="#007700"
     android:orientation="vertical">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/imgnext" />
+
     <ImageView
         android:id="@+id/actividad7_fondoImagen"
         android:layout_width="0dp"
