--- a/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
+++ b/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
@@ -161,4 +161,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/imgprev" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/imgnext" />
+
+
+
+
 </android.support.constraint.ConstraintLayout>
