--- a/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
+++ b/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
@@ -22,25 +22,26 @@
 
     <Button
         android:id="@+id/respuesta1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="2003"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/respuesta2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="2017"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/respuesta1" />
+        app:layout_constraintStart_toEndOf="@+id/respuesta1"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView7"
@@ -58,22 +59,25 @@
 
     <Button
         android:id="@+id/respuesta3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="11dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="1700"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <Button
         android:id="@+id/respuesta4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="27dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="1925"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/respuesta3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView8"
@@ -96,22 +100,21 @@
 
     <Button
         android:id="@+id/respuesta5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_width="155dp"
+        android:layout_height="66dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Kaialde eta Villa Ariatza ﬁnkak "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/respuesta4" />
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="197dp" />
 
     <Button
         android:id="@+id/respuesta6"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_width="155dp"
+        android:layout_height="66dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Villa Ariatza eta Eguzkilore"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/respuesta5" />
+        tools:layout_editor_absoluteX="202dp"
+        tools:layout_editor_absoluteY="197dp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -131,23 +134,25 @@
 
     <Button
         android:id="@+id/respuesta7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_width="155dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Javi Hoyosentzat"
-        app:layout_constraintBottom_toTopOf="@+id/respuesta8"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <Button
         android:id="@+id/respuesta8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="27dp"
         android:fontFamily="@font/josefin_slab_bold"
-        android:text="Luis Allenderentzat?"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:text="Luis Allenderentzat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnPreviousGame"
