--- a/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
+++ b/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
@@ -102,19 +102,23 @@
         android:id="@+id/respuesta5"
         android:layout_width="155dp"
         android:layout_height="66dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="9dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Kaialde eta Villa Ariatza ﬁnkak "
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="197dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
         android:id="@+id/respuesta6"
         android:layout_width="155dp"
         android:layout_height="66dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="27dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Villa Ariatza eta Eguzkilore"
-        tools:layout_editor_absoluteX="202dp"
-        tools:layout_editor_absoluteY="197dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView9"
