--- a/app/src/main/res/layout/activity_hizkisalda_18.xml
+++ b/app/src/main/res/layout/activity_hizkisalda_18.xml
@@ -576,7 +576,7 @@
                     android:id="@+id/txt5_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="R"
+                    android:text="K"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -707,7 +707,7 @@
                     android:id="@+id/txt6_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="E"
+                    android:text="L"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -838,7 +838,7 @@
                     android:id="@+id/txt7_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="D"
+                    android:text="E"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -969,7 +969,7 @@
                     android:id="@+id/txt8_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="T"
+                    android:text="K"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1101,7 +1101,7 @@
                     android:id="@+id/txt9_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="I"
+                    android:text="T"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1233,7 +1233,7 @@
                     android:id="@+id/txt10_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="K"
+                    android:text="I"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1338,7 +1338,7 @@
                     android:id="@+id/txt11_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="S"
+                    android:text="U"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1347,7 +1347,7 @@
                     android:id="@+id/txt11_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="O"
+                    android:text="Q"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1356,7 +1356,7 @@
                     android:id="@+id/txt11_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="T"
+                    android:text="C"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1365,7 +1365,7 @@
                     android:id="@+id/txt11_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="O"
+                    android:text="K"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1374,7 +1374,7 @@
                     android:id="@+id/txt11_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="A"
+                    android:text="E"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1470,7 +1470,7 @@
                     android:id="@+id/txt12_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="E"
+                    android:text="S"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1479,7 +1479,7 @@
                     android:id="@+id/txt12_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="R"
+                    android:text="O"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1488,7 +1488,7 @@
                     android:id="@+id/txt12_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="V"
+                    android:text="T"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1497,7 +1497,7 @@
                     android:id="@+id/txt12_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="A"
+                    android:text="O"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1506,7 +1506,7 @@
                     android:id="@+id/txt12_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="T"
+                    android:text="A"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -1629,7 +1629,7 @@
                     android:id="@+id/txt13_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="F"
+                    android:text="A"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
