Sopa de letras acabada

--- a/app/src/main/res/layout/activity_hizkisalda_18.xml
+++ b/app/src/main/res/layout/activity_hizkisalda_18.xml
@@ -1866,26 +1866,54 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textView15"
+                    android:id="@+id/respuesta2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sssssssss" />
+                    android:text="@string/Hizkirespuesta2"
+                    android:textSize="11sp" />
+
+                <TextView
+                    android:id="@+id/respuesta1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Hizkirespuesta1"
+                    android:textAllCaps="false"
+                    android:textSize="11sp" />
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content">
+
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/respuesta4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Hizkirespuesta4"
+                    android:textSize="11sp" />
+
+                <TextView
+                    android:id="@+id/respuesta3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Hizkirespuesta3"
+                    android:textSize="11sp" />
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content">
+
+            </TableRow>
         </TableLayout>
     </LinearLayout>
 
